fix: add row-gap between layout items

--- a/src/main/resources/assets/styles/foundation/_content.scss
+++ b/src/main/resources/assets/styles/foundation/_content.scss
@@ -209,11 +209,11 @@ main {
         }
 
         &.items {
-          column-gap: 40px;
           flex-direction: row;
           flex-wrap: wrap;
           justify-content: space-between;
           align-items: baseline;
+          row-gap: 40px;
 
           &.reverse {
             flex-wrap: wrap-reverse;
@@ -228,8 +228,8 @@ main {
             }
 
             &.middle {
-              margin-left: -20px;
-              margin-right: -20px;
+              margin-left: -10px;
+              margin-right: -10px;
 
               &>* {
                 padding-left: 8px;
